Ejemplo de paginación en PHP con Bootstrap

--- a/tema5/dom5.html
+++ b/tema5/dom5.html
@@ -1,5 +1,19 @@
-<!--Ejemplo de valor nulo en el elemento body del DOM, el navegador todavía no lo
-ha leído cuando es consultado -->
+<!--
+RECORRIENDO ELEMENTOS DEL DOM
+Para poder trabajar con los elementos del DOM
+tenemos que acceder a ellos. Todas las operaciones
+comienzan con la obtención de la referencia al elemento
+del DOM, comenzando por el objeto 'document'.
+
+Los tres principales elementos del DOM son:
+<html> = document.documentElement
+<body> = document.body
+<head> = document.head
+
+A continuación se muestra un ejemplo de valor nulo en el
+elemento body del DOM,  el navegador todavía no lo ha 
+leído cuando es consultado 
+-->
 <html>
 
 <head>
