--- a/tema5/dom6.html
+++ b/tema5/dom6.html
@@ -1,4 +1,9 @@
-<!-- childNodes, firstChild, lastChild-->
+<!-- 
+RECORRIENDO ELEMENTOS DEL DOM    
+    - childNodes: nodos hijos son todos desde un nodo dado
+    - firstChild: primer nodo hijo
+    - lastChild: último nodo hijo
+-->
 <!DOCTYPE html>
 <html>
 
@@ -8,7 +13,6 @@
 
 <body>
     <div>Begin</div>
-
     <ul>
     <li>Information</li>
     </ul>
