Ejemplos de manejo del DOM con JavaScript

--- a/tema5/tabla.html
+++ b/tema5/tabla.html
@@ -10,7 +10,7 @@
   
     <form name="buscar-persona">
       Buscar una persona:
-      <table id="age-table">
+      <table id="tabla-edades">
         <tbody><tr>
           <td>Edad:</td>
           <td id="lista-edades">
