--- a/tema5/alert.html
+++ b/tema5/alert.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <script>
-            //alert("Hola desde JavaScript");
+            //prompt, confirm y alert
             let res = prompt("Cuántas cervezas te vas a tomar?",3);
             let confirma = confirm("¿Estas seguro?");
             alert(confirma);
