--- a/tema6/freezeobj.html
+++ b/tema6/freezeobj.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <script src="https://unpkg.com/vue"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
 </head>
 
 <body>
