--- a/tema6/componentes/componente.html
+++ b/tema6/componentes/componente.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8"/>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
+    <script src="vue.js"></script>
 </head>
 
 <body>
@@ -14,7 +14,8 @@
             También necesitamos proporcionar a cada componente con una "clave",
             que vamos a explicar más adelante.
           -->
-            <todo-item v-for="item in groceryList" v-bind:todo="item" v-bind:key="item.id">
+            <todo-item v-for="item in groceryList" 
+            v-bind:todo="item" v-bind:key="item.id">
             </todo-item>
         </ol>
     </div>
